--- a/taotao-cloud-microservice/taotao-cloud-gateway-webflux/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-gateway-webflux/build.gradle
@@ -10,11 +10,12 @@ dependencies {
     }
     implementation 'org.apache.skywalking:apm-spring-cloud-gateway-4.x-plugin:9.5.0'
     implementation "org.springframework.cloud:spring-cloud-starter-loadbalancer"
-    implementation 'org.springframework.cloud:spring-cloud-starter-function-webflux'
+    //implementation 'org.springframework.cloud:spring-cloud-starter-function-webflux'
     implementation("org.springframework.cloud:spring-cloud-starter-gateway-server-webflux") {
         exclude group: "org.springframework.boot", module: "spring-boot-starter-web"
         exclude group: "org.springframework.boot", module: "spring-boot-starter-webflux"
     }
+    implementation "org.springframework.cloud:spring-cloud-gateway-proxyexchange-webflux"
 
     implementation "org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j"
     implementation "io.github.resilience4j:resilience4j-ratelimiter:2.3.0"
