--- a/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
+++ b/taotao-cloud-microservice/taotao-cloud-business/taotao-cloud-wechat/taotao-cloud-wechat-biz/build.gradle
@@ -29,23 +29,23 @@ dependencies {
 
     // 小程序开发
     //https://search.maven.org/artifact/com.github.binarywang/wx-java-miniapp-spring-boot-starter
-    implementation "com.github.binarywang:wx-java-miniapp-spring-boot-starter:4.8.0"
-    implementation "com.github.binarywang:wx-java-miniapp-multi-spring-boot-starter:4.8.0"
+    implementation "com.github.binarywang:wx-java-miniapp-spring-boot-starter:4.8.1.B"
+    implementation "com.github.binarywang:wx-java-miniapp-multi-spring-boot-starter:4.8.1.B"
     // 公众号开发
     //https://search.maven.org/artifact/com.github.binarywang/wx-java-mp-spring-boot-starter
-    implementation "com.github.binarywang:wx-java-mp-spring-boot-starter:4.8.0"
-    implementation "com.github.binarywang:wx-java-mp-multi-spring-boot-starter:4.8.0"
+    implementation "com.github.binarywang:wx-java-mp-spring-boot-starter:4.8.1.B"
+    implementation "com.github.binarywang:wx-java-mp-multi-spring-boot-starter:4.8.1.B"
     // 微信开放平台
     //https://search.maven.org/artifact/com.github.binarywang/wx-java-mp-spring-boot-starter
-    implementation "com.github.binarywang:wx-java-open-spring-boot-starter:4.8.0"
-    implementation "com.github.binarywang:wx-java-open-multi-spring-boot-starter:4.8.0-20260123.165534"
+    implementation "com.github.binarywang:wx-java-open-spring-boot-starter:4.8.1.B"
+    implementation "com.github.binarywang:wx-java-open-multi-spring-boot-starter:4.8.1.B"
     // 微信企业号开发
     //https://search.maven.org/artifact/com.github.binarywang/wx-java-cp-spring-boot-starter
-    implementation "com.github.binarywang:wx-java-cp-spring-boot-starter:4.8.0"
-    implementation "com.github.binarywang:wx-java-cp-multi-spring-boot-starter:4.8.0"
+    implementation "com.github.binarywang:wx-java-cp-spring-boot-starter:4.8.1.B"
+    implementation "com.github.binarywang:wx-java-cp-multi-spring-boot-starter:4.8.1.B"
     // 腾讯企点开发
     //https://search.maven.org/artifact/com.github.binarywang/wx-java-qidian-spring-boot-starter
-    implementation "com.github.binarywang:wx-java-qidian-spring-boot-starter:4.8.0"
+    implementation "com.github.binarywang:wx-java-qidian-spring-boot-starter:4.8.1.B"
 
     //https://github.com/lcy19930619/wechat-spring-boot-starter
     //implementation 'net.jlxxw:wechat-spring-boot-starter:2.0.1.20240302'
